# McRogueFace

./: .gitignore  .gitmodules  .mcp.json  ALPHA_STREAMLINE_WORKLOG.md  BUILD_FROM_SOURCE.md  CLAUDE.md  CMakeLists.txt  GNUmakefile  JANKFILE.md  LICENSE.md  Makefile  README.md  ROADMAP.md  build.sh  build_linux.sh  build_windows.bat  build_windows_cmake.bat  compile_commands.json  css_colors.txt  debug_linux.sh  generate_api_docs_html.py  generate_api_docs_simple.py  generate_color_table.py  generate_complete_api_docs.py  generate_complete_markdown_docs.py  mcrf-init.sh  pyrightconfig.json  run_linux.sh  symbols_linux.sh  wikicrayons_colors.txt
.gitea/workflows/: ci.yaml
api/: manifest.json
assets/: Sprite-0001.ase  test_portraits.ase
cmake/toolchains/: mingw-w64-x86_64.cmake
deps_linux/: libpython3.11.so.1.0  libsfml-graphics.so.2.5  libsfml-system.so.2.5  libsfml-window.so.2.5  libtcod.h
deps_linux/Python-3.11.1/: pyconfig.h
deps_windows/libtcod-1.23.1-x86_64-msvc/: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LIBTCOD-CREDITS.txt  LICENSE.txt  README.md  libtcod.exp  libtcod.lib
deps_windows/posix-stub/: unistd.h
docs/: API_REFERENCE_COMPLETE.md  API_REFERENCE_DYNAMIC.md  EMSCRIPTEN_RESEARCH.md  ISSUE_TRIAGE_2026-04.md  PROCEDURAL_GENERATION_SPEC.md  WASM_TROUBLESHOOTING.md  api-audit-2026-04.md  api-stability.md  api_reference_complete.html  api_reference_dynamic.html  grid-coordinate-spaces.md  mcrfpy.3  profiling.md  sprint-perf-342-348.md  threading-model.md
docs/stubs/: mcrfpy.pyi
explanation/: headless-automation.md
games/unwritten/: README.md  main.py
platform/linux/: platform.h
platform/windows/: platform.h  visual_studio_config.txt
roguelike_tutorial/: PART_6_8_IMPLEMENTATION_PLAN.md  README_PART_01.md  README_PART_02.md  README_PART_03.md  README_PART_04.md  README_PART_05.md  README_PART_06.md  README_PART_07.md  README_PART_08.md  _generated_part_5.py  part_0.py  part_1.py  part_1b.py  part_2-naive.py  part_2-onemovequeued.py  part_2.py  part_3.py  part_4.py  part_5.py  part_6.py  part_6a.py
sanitizers/: asan.supp  ubsan.supp  valgrind-mcrf.supp
scripts/: MusicScene.py
shade_sprite/: EVALUATION.md  __init__.py  animation.py  assembler.py  assets.py  demo.py  factions.py  formats.py
src/: ActionCode.h  Animation.cpp  Animation.h  BenchmarkLogger.cpp  BenchmarkLogger.h  Button.cpp  Button.h  CommandLineParser.cpp  CommandLineParser.h  Common.h  Components.h  DiscreteMap.cpp  DiscreteMap.h  Entity.cpp  Entity.h  EntityBehavior.cpp  EntityBehavior.h  EntityManager.cpp  EntityManager.h  GameEngine.cpp  GameEngine.h  Grid.cpp  Grid.h  GridChunk.cpp  GridChunk.h  GridData.cpp  GridData.h  GridLayers.cpp  GridLayers.h  HeadlessRenderer.cpp  HeadlessRenderer.h  ImGuiConsole.cpp  ImGuiConsole.h  ImGuiSceneExplorer.cpp  ImGuiSceneExplorer.h  IndexSprite.cpp  IndexSprite.h  IndexTexture.cpp  IndexTexture.h  Item.cpp  (+158 more)
src/3d/: Billboard.cpp  Billboard.h  Camera3D.cpp  Camera3D.h  Entity3D.cpp  Entity3D.h  EntityCollection3D.cpp  EntityCollection3D.h  Math3D.h  MeshLayer.cpp  MeshLayer.h  Model3D.cpp  Model3D.h  PyVoxelGrid.cpp  PyVoxelGrid.h  Shader3D.cpp  Shader3D.h  Viewport3D.cpp  Viewport3D.h  VoxelGrid.cpp  VoxelGrid.h  VoxelMesher.cpp  VoxelMesher.h  VoxelPoint.cpp  VoxelPoint.h  cgltf_impl.cpp  glad.c
src/audio/: AudioEffects.cpp  AudioEffects.h  SfxrSynth.cpp  SfxrSynth.h
src/ldtk/: AutoRuleResolve.cpp  AutoRuleResolve.h  LdtkParse.cpp  LdtkParse.h  LdtkTypes.h  PyAutoRuleSet.cpp  PyAutoRuleSet.h  PyLdtkProject.cpp  PyLdtkProject.h
src/platform/: EmscriptenStubs.cpp  GLContext.h  GLContext_Headless.cpp  GLContext_SDL2.cpp  GLContext_SFML.cpp  HeadlessTypes.h  SDL2Renderer.cpp  SDL2Renderer.h  SDL2Types.h
src/scripts/: Grid.py  TestScene.py  UIMenu.py  cos_entities.py  cos_itemdata.py  cos_level.py  cos_play.py  cos_solver.py  cos_tiles.py  engine_user.py  example_text_widgets.py  game.py  game_old.py  geometry.py  mcrf_venv.py  simple_tiles.txt  test_ui.py  text_input_widget_improved.py
src/scripts_demo/: game.py
src/scripts_playground/: game.py
src/tiled/: PyTileMapFile.cpp  PyTileMapFile.h  PyTileSetFile.cpp  PyTileSetFile.h  PyWangSet.cpp  PyWangSet.h  TiledParse.cpp  TiledParse.h  TiledTypes.h  WangResolve.cpp  WangResolve.h
stubs/: mcrfpy.pyi
stubs/mcrfpy/: __init__.pyi
tests/: KNOWN_ISSUES.md  README.md  WORKING_automation_test_example.py  all_inputs.py  animation_demo.py  api_changes_batch_test.py  api_createScene_test.py  api_keypressScene_test.py  api_setScene_currentScene_test.py  automation_click_issue78_analysis.py  automation_click_issue78_test.py  automation_screenshot_test.py  benchmark_moving_entities.py  benchmark_static_grid.py  conftest.py  constructor_audit.py  count_format_string.py  debug_viewport.py  demo_animation_callback_usage.py  generate_docs_screenshots_simple.py  gui.py  issue_12_gridpoint_instantiation_test.py  issue_177_gridpoint_grid_pos_test.py  issue_180_timer_stopped_test.py  issue_182_caption_size_test.py  issue_184_189_module_test.py  issue_185_188_bounds_test.py  issue_37_test.py  issue_76_test.py  issue_83_position_tuple_test.py  issue_84_pos_property_test.py  issue_95_uicollection_repr_test.py  issue_96_uicollection_extend_test.py  issue_99_texture_font_properties_test.py  issue_9_rendertexture_resize_test.py  issue_9_simple_test.py  minimal_test.py  path_vision_fixed.py  procgen_cave2_visualization.py  procgen_cave_visualization.py  (+28 more)
tests/api/: __init__.py  run_api_server.py  test_api_basic.py  test_api_windowed.py
tools/: api_delta.py  audit_pymethoddef.py  build_debug_libs.sh  capture_audio_synth_header.py  check_frozen_docstrings.sh  generate_all_docs.sh  generate_api_docs.py  generate_api_manifest.py  generate_dynamic_docs.py  generate_man_page.sh  generate_snippet_shots.py  generate_stubs.py  generate_stubs_v2.py  gitea_issues.py  package.sh  package_stdlib.py  stamp_snippets.py  stdlib_modules.yaml  test_link_transform.py  test_vector_docs.py  ui_methods_documentation.py  untrack_generated_docs.sh  validate_file_docstrings.sh  wf_docs_rewrite.js
web/: index.html
(+1150 files in other folders)
